--- a/app/globals.css
+++ b/app/globals.css
@@ -505,7 +505,7 @@ body {
 /* PlaidLink */
 .plaidlink-primary {
   /* border-bankGradient */
-  @apply text-16 rounded-lg border bg-bank-gradient font-semibold text-white shadow-form;
+  @apply text-16 rounded-md border bg-bank-gradient font-semibold text-white shadow-form;
 }
 
 .plaidlink-ghost {
@@ -513,7 +513,7 @@ body {
 }
 
 .plaidlink-default {
-  @apply flex !justify-start cursor-pointer gap-3 rounded-lg !bg-transparent flex-row;
+  @apply flex !justify-start cursor-pointer gap-3 rounded-md !bg-transparent flex-row;
 }
 
 /* Auth */
